Fix readme titles

--- a/Readme
+++ b/Readme
@@ -1,6 +1,6 @@
-# User kv vault plugin
+## User kv vault plugin
 This plugin is using secret engine to stor username and password for given user , it's an example to show how we can create secret plugin 
 
 
-# Usage
+## Usage
 It could be test using the docker.sh  
