Add more describtion about the project

--- a/Readme
+++ b/Readme
@@ -1,6 +1,14 @@
-## User kv vault plugin
-This plugin is using secret engine to stor username and password for given user , it's an example to show how we can create secret plugin 
+# User KV Vault Plugin
 
+This plugin utilizes the Vault secrets engine to store arbitrary key-value data, such as usernames and passwords for a given user. It serves as an example to demonstrate how to create and use a custom secrets plugin in Vault.
 
 ## Usage
-It could be test using the docker.sh  
+
+To test and run this plugin, you can use the provided `docker.sh` script. This script sets up a Docker environment for running the Vault server with the plugin enabled.
+
+### Running the Plugin
+
+First, make sure you have Docker installed on your machine. Then, you can run the following command:
+
+```bash
+./docker.sh
